# virtual-whiteboard-nea

./: README.md  project.code-workspace
CS NEA/: .gitignore  Notes.md  combined.md  compile.py  index.md
CS NEA/Analysis/: Combined.md  Existing Solutions.md  Existing solutions notes.md  Interview with Client.md  Introduction to problem.md  Investigation.md  Notes.md  Objectives v1.md  Objectives v2.md  Required sections.md
CS NEA/Documented Design/: Client Overview.md  Key algorithms.md  Rough ideas for project structure.md  Selection editing algorithm.md  Server Overview.md  Things to include.md
CS NEA/Documented Design/Client/: Classes and structures.md
CS NEA/Documented Design/Data structures/: Canvas items.md  Message types.md  Transfer.md
CS NEA/Documented Design/Server/: Communication protocol.md  Stored Data.md  Structures and methods.md  Web page structure.md
CS NEA/Ideas/: Long list.md
CS NEA/Technical Solution/: Skills Used.md
CS NEA/Testing/: Test Plan.md  Test table.md
CS NEA/compile/: __init__.py  core.py  parse.py
CS NEA/compile/stmt/: __init__.py  code.py  embed.py  header.py  meta.py  section.py
project/client/static/: crash-test.html  index.html
project/client/static/css/: import.css  markdown.css  properties.css  selection.css  testing.css  theme.css  ui.css  util.css
project/client/typescript/: .eslintrc.json  .gitignore  knip.json  mermaid.txt  package-lock.json  package.json  test.ts  tsconfig.json
project/server/: .gitignore  Cargo.toml
project/server/src/: client.rs  codegen.rs  lib.rs  main.rs  upload.rs  utils.rs
project/server/src/board/: active.rs  active_helpers.rs  board.rs  file.rs  iterate_impls.rs  manager.rs  method_impls.rs
project/server/src/canvas/: active.rs  canvas.rs  item.rs
project/server/src/message/: iterate.rs  message.rs  method.rs  notify_c.rs  reject.rs  reject_helpers.rs
project/server/src/tags/: tags.rs
prototypes/warp-test/: Cargo.toml
prototypes/warp-test/src/: main.rs
prototypes/warp-test/static/: index.html  script.js  style.css
(+68 files in other folders)
