[package]
name = "virtual_whiteboard"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "codegen"
path = "src/codegen.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
camino = "1.1.6"
derive_more = { version = "0.99.17", features = ["from", "deref"] }
flexi_logger = { version = "0.27.3", features = ["async"] }
futures = "0.3.29"
futures-util = "0.3.29"
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.20"
scc = "2.0.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread"] }
ts-rs = "7.0.0"
warp = "0.3.6"

[dependencies.clap]
version = "4.4.8"
features = ["derive"]
